--- a/css/qiuqiu.css
+++ b/css/qiuqiu.css
@@ -325,6 +325,18 @@ body {
   font-size: 1em;
   font-weight: 400;
   line-height: 1.5;
+  display: flex;
+  min-height: calc(100vh - 6.5rem);
+  flex-direction: column;
+}
+@media screen and (max-width: 768px) {
+  body {
+    min-height: calc(100vh - 3.25rem);
+  }
+}
+
+#wrapper {
+  flex: 1;
 }
 
 a {
@@ -3818,6 +3830,10 @@ a.box:active {
   color: #363636;
   font-weight: 600;
   line-height: 1.125;
+}
+.content p > img {
+  display: block;
+  margin: 0 auto;
 }
 .content h1 {
   font-size: 2em;
