--- a/bulma-0.9.2/sass/elements/icon.sass
+++ b/bulma-0.9.2/sass/elements/icon.sass
@@ -10,6 +10,8 @@ $icon-text-spacing: 0.25em !default
   justify-content: center
   height: $icon-dimensions
   width: $icon-dimensions
+  // 设置icon颜色为主题色
+  // color: $brand-color
   // Sizes
   &.is-small
     height: $icon-dimensions-small
