p标签下img居中

--- a/bulma-0.9.2/sass/elements/content.sass
+++ b/bulma-0.9.2/sass/elements/content.sass
@@ -45,11 +45,10 @@ $content-table-foot-cell-color: $text-strong !default
     font-weight: $content-heading-weight
     line-height: $content-heading-line-height
   // 针对p下面包含img的情况做居中处理，参考figure
-  // 暂时移除p下面包含img的居中梳理
-  // p > img
-    // // display: inline-block
-    // display: block
-    // margin: 0 auto
+  p > img
+    // display: inline-block
+    display: block
+    margin: 0 auto
   h1
     font-size: 2em
     margin-bottom: 0.5em
