--- a/sass/qiuqiu.scss
+++ b/sass/qiuqiu.scss
@@ -167,3 +167,7 @@ $content-blockquote-border-left: 5px solid $content-blockquote-border-left-color
 //     --> 增加无填充模式的通知类型，class为.is-no-padding
 //     -->
 //     -->
+// --> /form/tools.sass
+//     --> 在.field .is-grouped .is-grouped-multiline下增加新样式，支持align-items: center;
+//     -->
+//     -->
