--- a/sass/qiuqiu.scss
+++ b/sass/qiuqiu.scss
@@ -82,7 +82,7 @@ $content-blockquote-border-left: 5px solid $content-blockquote-border-left-color
 // @import "../bulma-0.9.2/sass/components/card.sass";
 // @import "../bulma-0.9.2/sass/components/dropdown.sass";
 // @import "../bulma-0.9.2/sass/components/level.sass";
-// @import "../bulma-0.9.2/sass/components/media.sass";
+@import "../bulma-0.9.2/sass/components/media.sass";
 // @import "../bulma-0.9.2/sass/components/menu.sass";
 // @import "../bulma-0.9.2/sass/components/message.sass";
 // @import "../bulma-0.9.2/sass/components/modal.sass";
@@ -93,7 +93,7 @@ $content-blockquote-border-left: 5px solid $content-blockquote-border-left-color
 
 // TODO 元素定制化导入
 // @import "../bulma-0.9.2/sass/elements/_all.sass";
-// @import "../bulma-0.9.2/sass/elements/box.sass";
+@import "../bulma-0.9.2/sass/elements/box.sass";
 // @import "../bulma-0.9.2/sass/elements/button.sass";
 @import "../bulma-0.9.2/sass/elements/container.sass";
 @import "../bulma-0.9.2/sass/elements/content.sass";
@@ -157,7 +157,7 @@ $content-blockquote-border-left: 5px solid $content-blockquote-border-left-color
 //     -->
 // --> /base/generic.sass
 //     --> 增加sticky footer支持，兼容不同浏览器和PC/移动设备
-//     -->
+//     --> 增加resume相关样式
 //     -->
 // --> /layout/footer.sass
 //     --> 修改footer标签的padding设置，从6rem改为3rem
